--- a/about.html
+++ b/about.html
@@ -36,6 +36,6 @@
       </ul>
     </div>
 
-    <div class="content"><h1>Welcome to my website</h1></div>
+    <div class="content"><h1>you wanna know more about me?</h1></div>
   </body>
 </html>
